--- a/templates/orders.html
+++ b/templates/orders.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 <h2>Заказы</h2>
+{% if current_user.role == 'admin' %}
 <a class="btn btn-sm btn-success mb-3" href="{{ url_for('import_orders') }}">Импорт заказов</a>
+{% endif %}
 <table class="table table-striped">
     <thead>
         <tr>
