--- a/templates/history.html
+++ b/templates/history.html
@@ -13,6 +13,7 @@
   <button type="submit" class="btn btn-primary me-2">Применить</button>
   <a class="btn btn-success" href="{{ url_for('export_history', period=period) }}">Экспорт в Excel</a>
 </form>
+<div class="table-responsive">
 <table class="table table-striped">
   <thead>
     <tr>
@@ -39,4 +40,5 @@
   {% endfor %}
   </tbody>
 </table>
+</div>
 {% endblock %}
