--- a/templates/map.html
+++ b/templates/map.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <h2>Карта заказов</h2>
-<div id="map" style="height: 500px;"></div>
+<div id="map"></div>
 {% endblock %}
 {% block scripts %}
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
