Refine UI styling with modern light theme

--- a/templates/couriers.html
+++ b/templates/couriers.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <h2>Курьеры</h2>
-<div class="table-responsive">
+<div class="table-responsive card">
 <table class="table table-striped">
     <thead><tr><th>ID</th><th>Имя</th><th>Telegram</th><th>Зоны</th></tr></thead>
     <tbody>
