--- a/templates/map.html
+++ b/templates/map.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <h2>Карта заказов</h2>
-<div class="map-container full-screen-map">
+<div class="card map-container full-screen-map">
   <div id="map" class="leaflet-map"></div>
 </div>
 {% endblock %}
