--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="row justify-content-center">
-  <div class="col-4">
+  <div class="col-11 col-sm-8 col-md-6 col-lg-4 card">
     <h2>Вход</h2>
     <form method="post">
       <div class="mb-3">
